SFDC_Learning/src/objects/Production__c.object
<CustomObject>
    <description>Production contains type of Production House ie. TV, Movie, Games etc.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description related to production house.</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fun_Facts__c</fullName>
        <label>Fun Facts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IMdb_URL__c</fullName>
        <description>URL of Production</description>
        <inlineHelpText>URL of production</inlineHelpText>
        <label>IMdb URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Production_Budget__c</fullName>
        <label>Estimated Budget</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Episods__c</fullName>
        <label>Total Episods</label>
        <summaryForeignKey>Episod__c.Production__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year the production was released.</description>
        <inlineHelpText>Year when production was released.</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <inlineHelpText>test</inlineHelpText>
        <label>test</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Production</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productions</pluralLabel>
    <recordTypes>
        <fullName>Movie</fullName>
        <active>true</active>
        <description>Used for creating and storing movie related info</description>
        <label>Movie</label>
    </recordTypes>
    <recordTypes>
        <fullName>TV_Serials</fullName>
        <active>true</active>
        <description>Used for creating and storing TV Serial related information.</description>
        <label>TV Serials</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video_Games</fullName>
        <active>true</active>
        <description>Used for creating and storing Video Games related information.</description>
        <label>Video Games</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>